--- a/apps/nuxt-b/package.json
+++ b/apps/nuxt-b/package.json
@@ -1,24 +1,21 @@
 {
   "name": "nuxt-b",
-  "private": true,
   "type": "module",
+  "private": true,
   "scripts": {
     "postinstall": "nuxt prepare",
     "build": "nuxt build",
     "dev": "HOST=0.0.0.0 nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "typecheck": "npx nuxi typecheck",
-    "lint": "eslint ."
+    "lint": "eslint --fix ."
   },
   "dependencies": {
-    "vue": "^3.4.24",
+    "vue": "^3.4.25",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@master/css.nuxt": "2.0.0-rc.28",
-    "nuxt": "^3.11.2",
-    "typescript": "^5.4.5",
-    "vue-tsc": "^2.0.14"
+    "@master/css.nuxt": "^2.0.0-rc.33",
+    "nuxt": "^3.11.2"
   }
 }
