chore: add antfu/eslint-config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,33 @@
 {
-  // "prettier.enable": false, // Disable the default formatter, use eslint instead
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  // Enable the ESlint flat config support
+  "eslint.experimental.useFlatConfig": true,
+  "eslint.workingDirectories": [{ "pattern": "apps/*" }],
 
-  "editor.formatOnPaste": false, // required
-  "editor.formatOnType": false, // required
-  "editor.formatOnSave": false, // optional, if you use ESlint，this should be false
-  "editor.formatOnSaveMode": "file", // required to format on save
+  // Disable the default formatter, use eslint instead
+  "prettier.enable": false,
+  "editor.formatOnSave": false,
 
-  "editor.quickSuggestions": {
-    "strings": true
-  },
-
+  // Auto fix
   "editor.codeActionsOnSave": {
-    "source.organizeImports": "never",
-    "source.fixAll": "never",
     "source.fixAll.eslint": "explicit",
-    "source.fixAll.stylelint": "explicit",
-    "source.fixAll.markdownlint": "explicit"
+    "source.organizeImports": "never"
   },
 
+  // Silent the stylistic rules in you IDE, but still auto fix them
+  "eslint.rules.customizations": [
+    { "rule": "style/*", "severity": "off" },
+    { "rule": "format/*", "severity": "off" },
+    { "rule": "*-indent", "severity": "off" },
+    { "rule": "*-spacing", "severity": "off" },
+    { "rule": "*-spaces", "severity": "off" },
+    { "rule": "*-order", "severity": "off" },
+    { "rule": "*-dangle", "severity": "off" },
+    { "rule": "*-newline", "severity": "off" },
+    { "rule": "*quotes", "severity": "off" },
+    { "rule": "*semi", "severity": "off" }
+  ],
+
+  // Enable eslint for all supported languages
   "eslint.validate": [
     "javascript",
     "javascriptreact",
@@ -26,44 +35,12 @@
     "typescriptreact",
     "vue",
     "html",
+    "markdown",
     "json",
     "jsonc",
     "yaml",
-    "toml"
-  ],
-
-  // Enable the ESlint flat config support
-  "eslint.experimental.useFlatConfig": true,
-  "eslint.workingDirectories": [{ "pattern": "apps/*" }],
-
-  // "eslint.rules.customizations": [
-  //   { "rule": "style/*", "severity": "off" },
-  //   { "rule": "format/*", "severity": "off" },
-  //   { "rule": "*-indent", "severity": "off" },
-  //   { "rule": "*-spacing", "severity": "off" },
-  //   { "rule": "*-spaces", "severity": "off" },
-  //   { "rule": "*-order", "severity": "off" },
-  //   { "rule": "*-dangle", "severity": "off" },
-  //   { "rule": "*-newline", "severity": "off" },
-  //   { "rule": "*quotes", "severity": "off" },
-  //   { "rule": "*semi", "severity": "off" }
-  // ],
-
-  "stylelint.enable": true,
-  "stylelint.validate": [
-    "css",
-    "less",
-    "postcss",
-    "sass",
-    "scss",
-    "vue",
-    "html"
-  ],
-  "css.validate": false,
-  "less.validate": false,
-  "scss.validate": false,
-
-  "[markdown]": {
-    "editor.defaultFormatter": "DavidAnson.vscode-markdownlint"
-  }
+    "toml",
+    "gql",
+    "graphql"
+  ]
 }
