--- a/apps/nuxt-b/package.json
+++ b/apps/nuxt-b/package.json
@@ -8,7 +8,8 @@
     "dev": "HOST=0.0.0.0 nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "lint": "eslint --fix ."
+    "lint": "eslint --fix .",
+    "typecheck": "npx nuxi typecheck"
   },
   "dependencies": {
     "vue": "^3.4.25",
@@ -16,6 +17,8 @@
   },
   "devDependencies": {
     "@master/css.nuxt": "^2.0.0-rc.33",
-    "nuxt": "^3.11.2"
+    "nuxt": "^3.11.2",
+    "typescript": "^5.4.5",
+    "vue-tsc": "^2.0.14"
   }
 }
